Refakturert oppsett av tester (#407)
* Moved FlywayConfiguration to application.properties

* Lar nå Spring Boot styre Flyway migreringer.

* Removed redundant @EnableKafka. Made dataSource private.

* Gjenbruker eksisterende bønner i kontekst i stedet for å instansiere nye.

* Merge fixes

* build.gradle.kts cleanup